# wb-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  ssd.py
.aiassistant/rules/: wb-agent.md
.cursor/rules/: wb-agent.mdc
.github/: copilot-instructions.md
.kiro/steering/: tech.md
.windsurf/rules/: wb-agent.md
antigravity_ssd/: __init__.py  __main__.py  cli.py  generator.py  registry.py  templates.py
test-output-deep/.agent/: README.md
test-output-deep/.agent/identity/: master-identity.md
test-output-deep/.agent/knowledge_base/: infrastructure.md
test-output-deep/.agent/scripts/bash/: check-prerequisites.sh  create-new-feature.sh
test-output-deep/.agent/skills/speckit.analyze/: SKILL.md
test-output-deep/.agent/skills/speckit.checklist/: SKILL.md
test-output-deep/.agent/skills/speckit.clarify/: SKILL.md
test-output-deep/.agent/skills/speckit.diff/: SKILL.md
test-output-deep/.agent/skills/speckit.implement/: SKILL.md
test-output-deep/.agent/skills/speckit.migrate/: SKILL.md
test-output-deep/.agent/skills/speckit.specify/: SKILL.md
test-output-deep/.agent/skills/speckit.status/: SKILL.md
test-output-deep/.agent/templates/: constitution-template.md  plan-template.md  spec-template.md  tasks-template.md
test-output-deep/.agent/workflows/: 00-speckit.all.md  03-speckit.clarify.md  04-speckit.plan.md  05-speckit.tasks.md  06-speckit.analyze.md  07-speckit.implement.md  11-speckit.validate.md  util-speckit.checklist.md  util-speckit.diff.md  util-speckit.status.md  util-speckit.taskstoissues.md
test-output-infra/.agent/: README.md
test-output-infra/.agent/identity/: master-identity.md
test-output-infra/.agent/scripts/bash/: create-new-feature.sh
test-output-infra/.agent/skills/speckit.checker/: SKILL.md
test-output-infra/.agent/skills/speckit.constitution/: SKILL.md
test-output-infra/.agent/skills/speckit.devops/: SKILL.md
test-output-infra/.agent/skills/speckit.identity/: SKILL.md
test-output-infra/.agent/skills/speckit.implement/: SKILL.md
test-output-infra/.agent/skills/speckit.plan/: SKILL.md
test-output-infra/.agent/skills/speckit.quizme/: SKILL.md
test-output-infra/.agent/skills/speckit.reviewer/: SKILL.md
test-output-infra/.agent/skills/speckit.tasks/: SKILL.md
test-output-infra/.agent/skills/speckit.taskstoissues/: SKILL.md
test-output-infra/.agent/skills/speckit.tester/: SKILL.md
test-output-infra/.agent/skills/speckit.validate/: SKILL.md
test-output-infra/.agent/templates/: constitution-template.md  plan-template.md  spec-template.md  tasks-template.md
test-output-infra/.agent/workflows/: 00-speckit.all.md  01-speckit.constitution.md  02-speckit.specify.md  08-speckit.checker.md  09-speckit.tester.md  10-speckit.reviewer.md  speckit.prepare.md  util-speckit.migrate.md  util-speckit.quizme.md
wb_agent/: __init__.py  __main__.py  cli.py  generator.py  registry.py  scanner.py  skill_templates.py  templates.py  workflow_templates.py
