[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antigravity-ssd"
version = "1.0.0"
description = "⚡ Spec-Driven Development CLI - Initialize any project with Antigravity's agentic AI workflow"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Antigravity Team"}
]
keywords = [
    "spec-driven-development",
    "ai-agent",
    "sdlc",
    "antigravity",
    "code-generation",
    "project-scaffolding",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/compnew2006/antigravity-ssd"
Repository = "https://github.com/compnew2006/antigravity-ssd"
Issues = "https://github.com/compnew2006/antigravity-ssd/issues"

# Console script: lệnh `wb-agent` chạy được ở mọi nơi sau khi pip install
[project.scripts]
wb-agent = "antigravity_ssd.cli:main"

[tool.setuptools.packages.find]
include = ["antigravity_ssd*"]
