[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wb-agent"
version = "1.0.0"
description = "⚡ Spec-Driven Development CLI - Initialize ASF 3.3 projects with Antigravity standards"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Antigravity Team"}
]
keywords = [
    "spec-driven-development",
    "ai-agent",
    "sdlc",
    "antigravity",
    "code-generation",
    "project-scaffolding",
    "wb-agent"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/toanndmarketing/wb-agent"
Repository = "https://github.com/toanndmarketing/wb-agent"
Issues = "https://github.com/toanndmarketing/wb-agent/issues"

[project.scripts]
wb-agent = "wb_agent.cli:main"

[tool.setuptools.packages.find]
include = ["wb_agent*"]
